manifests/hellodeploy.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: <your-dockerhub-username>/hello-service:latest
        ports:
        - containerPort: 5000
