manifests/timedeploy.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
      - name: time
        image: <your-dockerhub-username>/time-service:latest
        ports:
        - containerPort: 5000
