manifests/timeservice.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  selector:
    app: time
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
